<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".presentation.screens.profile.ProfileFragment"
    tools:showIn="@layout/fragment_profile">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/profileIV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:contentDescription="@string/profile_picture"
            android:scaleType="fitStart"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:srcCompat="@drawable/ic_standard_profile" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/personalInfoLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/profile_main_section_margin_horizontal"
            android:layout_marginVertical="@dimen/profile_layouts_margin_vertical"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/profileNameTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/screen_h1_margin_vertical"
                android:text="Константинов Денис"
                android:theme="@style/ScreenH1TextView"
                tools:text="Константинов Денис" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/birthdayHeaderTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Дата рождения"
                android:theme="@style/ProfileAttributeHeaderTextView"
                tools:text="Дата рождения" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/birthdayValueTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/profile_attributes_margin_vertical"
                android:text="01 февраля 1980"
                android:theme="@style/ProfileAttributeValueTextView"
                tools:text="01 февраля 1980" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/scopeOfActivityHeaderTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Сфера деятельности"
                android:theme="@style/ProfileAttributeHeaderTextView"
                tools:text="Сфера деятельности" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/scopeOfActivityValueTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Хирургия, травмотология"
                android:theme="@style/ProfileAttributeValueTextView"
                tools:text="Хирургия, травмотология" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/notificationSwitch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/profile_notification_margin_vertical"
                android:checked="true"
                android:text="@string/push"
                android:theme="@style/Switch" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="@dimen/divider_height"
            android:theme="@style/SectionDivider" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/friendsLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/profile_main_section_margin_horizontal"
            android:layout_marginVertical="@dimen/profile_main_section_margin_vertical"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/friendsHeaderTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/profile_friend_list_header_margin_top"
                android:text="@string/your_friends"
                android:theme="@style/ProfileAttributeHeaderTextView" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/friendRecycler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:itemCount="10"
                tools:listitem="@layout/item_friend" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="@dimen/divider_height"
            android:theme="@style/SectionDivider" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/profile_main_section_margin_vertical"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:paddingHorizontal="@dimen/button_padding_horizontal"
                android:text="@string/logout" />
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.core.widget.NestedScrollView>