<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".presentation.screens.eventDetails.EventDetailsFragment">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/event_details_toolbar_margin_bottom"
            android:theme="@style/Toolbar"
            app:layout_scrollFlags="scroll|enterAlways"
            app:menu="@menu/event_details_toolbar_menu"
            app:navigationIcon="@drawable/ic_back"
            app:popupTheme="@style/Base.Theme.SimbirSoftMobile"
            app:titleTextColor="?attr/colorOnPrimary">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/toolbarTitleTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/profile"
                android:theme="@style/ToolbarTitle"
                tools:text="Новости" />
        </androidx.appcompat.widget.Toolbar>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="@dimen/event_details_padding">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/titleTV"
                style="@style/EventDetailsTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/event_details_elements_margin_bottom"
                tools:text="Спонсоры отремонтируют школу-интернат" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/remainDateLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/event_details_elements_margin_bottom"
                android:gravity="start|center_vertical"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="@dimen/event_details_icon_size"
                    android:layout_height="@dimen/event_details_icon_size"
                    android:src="@drawable/ic_calendar"
                    app:tint="@color/grey" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/remainDateTV"
                    style="@style/EventDetailsDateTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    tools:text="Осталось 13 дней (21.09 – 20.10)" />
            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/organizerNameTV"
                style="@style/OrganizerNameTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/event_details_elements_margin_bottom"
                android:textAlignment="center"
                tools:text="Благотворительный Фонд «Счастливый Мир»" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/event_details_elements_margin_bottom">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="@dimen/event_details_icon_size"
                    android:layout_height="@dimen/event_details_icon_size"
                    android:src="@drawable/ic_location"
                    app:tint="@color/blue_grey" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/addressTV"
                    style="@style/EventDescription"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="Санкт-Петербург, Кирочная улица,
д. 50А, каб. 208" />
            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/event_details_elements_margin_bottom">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="@dimen/event_details_icon_size"
                    android:layout_height="@dimen/event_details_icon_size"
                    android:src="@drawable/ic_phone"
                    app:tint="@color/blue_grey" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/phoneTV"
                    style="@style/EventDescription"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    tools:text="+7 (937) 037 37-73\n+7 (937) 016 16-16" />
            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/emailLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/event_details_sections_margin_bottom"
                android:gravity="center_vertical">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="@dimen/event_details_icon_size"
                    android:layout_height="@dimen/event_details_icon_size"
                    android:src="@drawable/ic_mail"
                    app:tint="@color/blue_grey" />

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/EventDescription"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/do_you_have_questions"
                    android:textAlignment="center" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/sendEmailTV"
                    style="@style/EventClickableText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/event_details_horizontal_text_space"
                    android:clickable="true"
                    android:text="@string/write_us_underline"
                    android:textAlignment="center" />
            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/previewIV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/event_details_sections_margin_bottom"
                android:adjustViewBounds="true"
                android:src="@drawable/news_preview" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/descriptionTV"
                style="@style/EventDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/event_details_sections_margin_bottom"
                tools:text="Участники и болельщики смогли весело и активно провести время на «Петербургском благотворительном марафоне» и при этом финансово поучаствовать в помощи детям." />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/organizerUrlTV"
                style="@style/EventClickableText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:text="@string/go_to_organizer"
                android:textAlignment="center" />
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.appcompat.widget.LinearLayoutCompat>
</ScrollView>